upd: mypy and vscode files

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # VSCode files
 *workspace
 settings.json
+.vscode
 
 # Byte-compiled
 __pycache__/
 
 # Unit test / coverage reports
 .pytest_cache/
+.mypy_cache
